--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -1,84 +1,87 @@
 //à décommenter si vous avez un logo à remplacer
 @font-face {
-	font-family: "Ludicrous-Stencil";
-	src: url('../fonts/Ludicrous-Stencil.ttf') ;
-   }
-.navbar { 
-  width: 100%;  
-  z-index: 100;
-  /*-----------image logo----------*/
-  
-  a.logo{  
-    content:$logoImg; 
-    width:140px ;
-  }   
-  
+    font-family: "Ludicrous-Stencil";
+    src: url('../fonts/Ludicrous-Stencil.ttf');
+}
+
+.navbar {
+    width: 100%;
+    z-index: 100;
+    /*-----------image logo----------*/
+    a.logo {
+        content: $logoImg;
+        width: 140px;
+    }
     li {
-        a{
-          position: relative;
-          display: block;
-          font-family: Lato, sans-serif;
-          color: $color-profile1;    
-          text-decoration: none;
-          text-transform: uppercase;
-          transition: 0.5s;
-          font-weight: 800;
-    
-          &::after {
-            position: absolute;
-            content: "";
-            top: 80%;
-            left: 0;
-            width: 100%;
-            height: 3px;
-            background-color: $color-profile1;
-            transform: scaleX(0);
-            transform-origin: right;
-            transition: all 0.5s;
-          }
-    
-          &:hover {
-            color: $color-profile2;          
-          }
-    
-          &:hover::after {
-            transform: scaleX(1);
-            transform-origin: left;
-          }
+        a {
+            position: relative;
+            display: block;
+            font-family: Lato, sans-serif;
+            color: $color-profile1;
+            text-decoration: none;
+            text-transform: uppercase;
+            transition: 0.5s;
+            font-weight: 800;
+            &::after {
+                position: absolute;
+                content: "";
+                top: 80%;
+                left: 0;
+                width: 100%;
+                height: 3px;
+                background-color: $color-profile1;
+                transform: scaleX(0);
+                transform-origin: right;
+                transition: all 0.5s;
+            }
+            &:hover {
+                color: $color-profile2;
+            }
+            &:hover::after {
+                transform: scaleX(1);
+                transform-origin: left;
+            }
         }
-      }  
-    position: fixed;    
+    }
+    position: fixed;
     top:0;
-    background-color: rgba(255,255,255,0); // media query    
-    
+    background-color: rgba(255,
+    255,
+    255,
+    0); // media query    
     // height: 80px;    
 }
+
 a.active:not(.logo) {
-    color: $color-profile2;   
-}
-.invisible{
-  top:-50px;   
+    color: $color-profile2;
 }
 
-.scrolled {      
-    background-image: $color-bgNav;  
-    box-shadow: 0px 7px 15px -7px #000000;   
+.invisible {
+    top: -50px;
 }
+
+.scrolled {
+    background-image: $color-bgNav;
+    box-shadow: 0px 7px 15px -7px #000000;
+}
+
 //custom icon navbar to white with svg
 .custom-toggler.navbar-toggler {
-  border-color: rgba(255, 102, 204, 0);
+    border-color: rgba(255, 102, 204, 0);
 }
+
 .custom-toggler .navbar-toggler-icon {
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
+
 // ____________________
-
-.bgcolorMobilToggle{
-  background-image: $color-bgNav;  
-  transition: all 0.3s linear; 
-  
+.bgcolorMobilToggle {
+    background-image: $color-bgNav;
+    transition: all 0.3s linear;
 }
 
- .navbar-collapse,.navbar { // Chrome // Mozilla // Opera
-  transition: all 0.3s linear; 
+.navbar-collapse,
+.navbar {
+    // Chrome // Mozilla // Opera
+    transition: all 0.3s linear;
 }
