--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,7 +66,8 @@ body {
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
@@ -74,7 +75,8 @@ img {
   border-style: none;
 }
 
-*:focus, *:active {
+*:focus,
+*:active {
   outline: none !important;
   -webkit-tap-highlight-color: transparent;
 }
