--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -4,6 +4,10 @@
     src: url('../fonts/Ludicrous-Stencil.ttf');
 }
 
+// html,
+// body {
+//     width: 100vw;
+// }
 .navbar {
     width: 100%;
     z-index: 100;
