--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -22,6 +22,8 @@ footer {
     padding: 2px 5px;
 }
 
+@include for-phone-tablet {}
+
 @include for-phone {
     // header -----------------     
     //margin 
