--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -85,13 +85,12 @@
     transition: all 0.3s linear;
 }
 
-.styleNav {
-    border-radius: 0 0 80% 0;
-    box-shadow: 3px 7px 14px -6px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 3px 7px 14px -6px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 3px 7px 14px -6px rgba(0, 0, 0, 0.75);
-}
-
+// .styleNav {
+//     border-radius: 0 0 80% 0;
+//     box-shadow: 3px 7px 14px -6px rgba(0, 0, 0, 0.75);
+//     -webkit-box-shadow: 3px 7px 14px -6px rgba(0, 0, 0, 0.75);
+//     -moz-box-shadow: 3px 7px 14px -6px rgba(0, 0, 0, 0.75);
+// }
 .styleNav {
     border-radius: 0 0 80% 0;
     box-shadow: 0 0 65px $color-profile2 inset, 0 0 20px #8caabe inset, 0 0 5px #476281;
