--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,5 @@
 /*
     |-------------------------------|
-    |-------theme parametres--------|
-    |-------------------------------|
-    */
-/*
-    |-------------------------------|
     |------- Variables Colors-------|
     |-------------------------------|
     */
@@ -245,7 +240,7 @@ h4, .logo {
 }
 
 .navbar a.logo {
-  content: url(../images/logoBlue.png);
+  content: url(../images/logoOrange.png);
   width: 140px;
 }
 
@@ -274,7 +269,7 @@ h4, .logo {
 }
 
 .navbar li a:hover {
-  color: #07485e;
+  color: #b18502;
 }
 
 .navbar li a:hover::after {
@@ -283,7 +278,7 @@ h4, .logo {
 }
 
 .active {
-  color: #07485e !important;
+  color: #b18502 !important;
 }
 
 .invisible {
@@ -291,7 +286,7 @@ h4, .logo {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #02769B 50%);
+  background-image: linear-gradient(90deg, #6d5002 10%, #b18502 35%, #d8a306 50%);
   box-shadow: 0px 7px 15px -7px #000000;
 }
 
@@ -304,13 +299,13 @@ h4, .logo {
 }
 
 .bgcolorMobilToggle {
-  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #02769B 50%);
+  background-image: linear-gradient(90deg, #6d5002 10%, #b18502 35%, #d8a306 50%);
   transition: all 0.3s linear;
 }
 
 .navbar.styleNav {
   border-radius: 0 0 90% 0;
-  box-shadow: 0 0 65px #07485e inset, 0 0 20px #a1b4c0 inset, 0 0 5px #476281;
+  box-shadow: 0 0 65px #b18502 inset, 0 0 20px #c7b57a inset, 0 0 5px #5a562d;
 }
 
 .navbar.styleNav .navbar-collapse {
@@ -389,7 +384,7 @@ h4, .logo {
   margin: 0 auto;
   color: white;
   /* Clip Background Image */
-  background: url("../images/animated-text-fill-blue.webp") repeat-y;
+  background: url("../images/animated-text-fill-orange.webp") repeat-y;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -459,7 +454,7 @@ h4, .logo {
 }
 
 .twoButtons div:hover a {
-  color: #07485e;
+  color: #b18502;
   opacity: 1;
 }
 
@@ -475,7 +470,7 @@ h4, .logo {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #07485e;
+  color: #b18502;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
@@ -720,7 +715,7 @@ h4, .logo {
 }
 
 .skills-bar-container li .bar-container {
-  background-color: rgba(7, 72, 94, 0.5);
+  background-color: rgba(177, 133, 2, 0.5);
   position: relative;
   height: 5px;
   margin-top: 5px;
@@ -729,7 +724,7 @@ h4, .logo {
 }
 
 .skills-bar-container li .bar-container .progressbar {
-  background-color: #07485e;
+  background-color: #b18502;
   position: absolute;
   width: 0%;
   height: 100%;
@@ -905,13 +900,13 @@ h4, .logo {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #02769B;
+  color: #d8a306;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-menu li:hover, .portfolio #portfolio-menu li.filter-active {
-  color: #07485e;
+  color: #b18502;
 }
 
 .portfolio #portfolio-menu li:last-child {
@@ -944,7 +939,7 @@ h4, .logo {
   position: absolute;
   width: 100%;
   height: 30%;
-  background: rgba(7, 72, 94, 0.7);
+  background: rgba(177, 133, 2, 0.7);
   left: 0;
   bottom: -100%;
   padding: 20px;
@@ -964,7 +959,7 @@ h4, .logo {
 }
 
 .cardbg {
-  background-color: #07485e !important;
+  background-color: #b18502 !important;
 }
 
 /*--------------------------------------------------------------
@@ -1017,7 +1012,7 @@ h4, .logo {
   font-style: italic;
   margin: 0 15px 15px 15px;
   padding: 20px;
-  background: rgba(7, 72, 94, 0.2);
+  background: rgba(177, 133, 2, 0.2);
   position: relative;
   margin-top: 35px;
   border-radius: 6px;
@@ -1122,13 +1117,13 @@ footer {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #07485e;
+  box-shadow: inset 0 0 5px #b18502;
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #07485e;
+  background: #b18502;
   border-radius: 10px;
 }
 
@@ -1139,7 +1134,7 @@ html::-webkit-scrollbar {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #02769B;
+  background: #d8a306;
 }
 
 /*--------------------------------------------------------------
@@ -1153,7 +1148,7 @@ html::-webkit-scrollbar {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #07485e;
+  background: #b18502;
   color: white;
   transition: all 0.5s ease-in-out;
   z-index: 50;
@@ -1167,7 +1162,7 @@ html::-webkit-scrollbar {
 }
 
 .back-to-top:hover {
-  background: #02769B;
+  background: #d8a306;
 }
 
 .flexrow {
@@ -1185,6 +1180,6 @@ html::-webkit-scrollbar {
 }
 
 .title {
-  color: #07485e;
+  color: #b18502;
 }
 /*# sourceMappingURL=main.css.map */
