--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 //thèmes
-$blueTheme:false;
-$orangeTheme:true;
+$blueTheme: true;
+$orangeTheme:false;
 $greenTheme: false;
 // color by default 
 $color-profile2:rgb(7, 72, 94);
