--- a/public/css/main.css
+++ b/public/css/main.css
@@ -237,11 +237,16 @@ h4, .logo {
   position: fixed;
   top: 0;
   background-color: rgba(255, 255, 255, 0);
+  transition: all 1s;
 }
 
 .navbar a.logo {
   content: url(../images/logoBlue.png);
   width: 140px;
+}
+
+.navbar .navbar-collapse {
+  margin-left: 10px;
 }
 
 .navbar li a {
@@ -306,10 +311,6 @@ h4, .logo {
 .navbar.styleNav {
   border-radius: 0 0 90% 0;
   box-shadow: 0 0 65px #07485e inset, 0 0 20px #a1b4c0 inset, 0 0 5px #476281;
-}
-
-.navbar.styleNav .navbar-collapse {
-  margin-left: 10px;
 }
 
 .styleNav:after,
