--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -16,6 +16,9 @@
         content: $logoImg;
         width: 140px;
     }
+    .navbar-collapse {
+        margin-left: 10px;
+    }
     li {
         a {
             position: relative;
@@ -52,8 +55,8 @@
     background-color: rgba(255,
     255,
     255,
-    0); // media query    
-    // height: 80px;    
+    0);
+    transition: all 1s;
 }
 
 // :not(.logo)
@@ -88,9 +91,6 @@
 .navbar.styleNav {
     border-radius: 0 0 90% 0;
     box-shadow: $box-shadow-navbar-mobile;
-    .navbar-collapse {
-        margin-left: 10px;
-    }
 }
 
 .styleNav:after,
