--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -22,7 +22,35 @@ footer {
     padding: 2px 5px;
 }
 
-@include for-phone-tablet {}
+@include for-phone-tablet {
+    .navbar-collapse {
+        margin-right: 10%;
+        .navbar-nav {
+            width: 100%;
+        }
+        .nav-item1 .link1 {
+            margin-left: 90%;
+        }
+        .nav-item2 .link2 {
+            margin-left: 82%;
+        }
+        .nav-item3 .link3 {
+            margin-left: 74%;
+        }
+        .nav-item4 .link4 {
+            margin-left: 55%;
+        }
+        .nav-item5 .link5 {
+            margin-left: 38%;
+        }
+        .nav-item6 .link6 {
+            margin-left: 16%;
+        }
+        .nav-item7 .link7 {
+            margin-left: 0%;
+        }
+    }
+}
 
 @include for-phone {
     // header -----------------     
