--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -35,19 +35,22 @@ footer {
             margin-left: 82%;
         }
         .nav-item3 .link3 {
-            margin-left: 74%;
+            margin-left: 76%;
         }
         .nav-item4 .link4 {
-            margin-left: 55%;
+            margin-left: 57%;
         }
         .nav-item5 .link5 {
-            margin-left: 38%;
+            margin-left: 40%;
         }
         .nav-item6 .link6 {
             margin-left: 16%;
         }
         .nav-item7 .link7 {
             margin-left: 0%;
+        }
+        .nav-item {
+            letter-spacing: 1px;
         }
     }
 }
