--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1075,19 +1075,22 @@ footer {
     margin-left: 82%;
   }
   .navbar-collapse .nav-item3 .link3 {
-    margin-left: 74%;
+    margin-left: 76%;
   }
   .navbar-collapse .nav-item4 .link4 {
-    margin-left: 55%;
+    margin-left: 57%;
   }
   .navbar-collapse .nav-item5 .link5 {
-    margin-left: 38%;
+    margin-left: 40%;
   }
   .navbar-collapse .nav-item6 .link6 {
     margin-left: 16%;
   }
   .navbar-collapse .nav-item7 .link7 {
     margin-left: 0%;
+  }
+  .navbar-collapse .nav-item {
+    letter-spacing: 1px;
   }
 }
 
