--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -85,6 +85,10 @@
 .navbar.styleNav {
     border-radius: 0 0 90% 0;
     box-shadow: $box-shadow-navbar-mobile;
+    // opacity: .9;
+    background: radial-gradient(circle at 0 0, transparent 50%, $color-profile2 50%) top left;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .styleNav:after,
