--- a/public/css/main.css
+++ b/public/css/main.css
@@ -256,28 +256,6 @@ h4, .logo {
   font-weight: 800;
 }
 
-.navbar li a::after {
-  position: absolute;
-  content: "";
-  top: 80%;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background-color: white;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: all 0.5s;
-}
-
-.navbar li a:hover {
-  color: #07485e;
-}
-
-.navbar li a:hover::after {
-  transform: scaleX(1);
-  transform-origin: left;
-}
-
 .active {
   color: #07485e !important;
 }
@@ -297,24 +275,6 @@ h4, .logo {
 
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
-
-.bgcolorMobilToggle {
-  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 35%, #02769B 50%);
-  transition: all 0.3s linear;
-}
-
-.navbar.styleNav {
-  border-radius: 0 0 90% 0;
-  box-shadow: 0 0 65px #07485e inset, 0 0 20px #a1b4c0 inset, 0 0 5px #476281;
-  background: radial-gradient(circle at 0 0, transparent 50%, #07485e 50%) top left;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-}
-
-.styleNav:after,
-.styleNav:before {
-  display: none;
 }
 
 .parallax-wrapper {
@@ -1065,32 +1025,23 @@ footer {
 }
 
 @media only screen and (max-width: 992px) {
-  .navbar-collapse {
-    margin-right: 1%;
+  .bgcolorMobilToggle {
+    background-image: linear-gradient(90deg, #00151f 10%, #002b3f 35%, #02769B 50%);
+    transition: all 0.3s linear;
+  }
+  .navbar.styleNav {
+    border-radius: 0 0 80% / 100% 0;
+    box-shadow: 0 0 65px #07485e inset, 0 0 20px #a1b4c0 inset, 0 0 5px #476281;
+  }
+  .styleNav:after,
+  .styleNav:before {
+    display: none;
   }
   .navbar-collapse .navbar-nav {
     width: 100%;
   }
-  .navbar-collapse .nav-item1 .link1 {
-    margin-left: 83%;
-  }
-  .navbar-collapse .nav-item2 .link2 {
-    margin-left: 78%;
-  }
-  .navbar-collapse .nav-item3 .link3 {
-    margin-left: 73%;
-  }
-  .navbar-collapse .nav-item4 .link4 {
-    margin-left: 57%;
-  }
-  .navbar-collapse .nav-item5 .link5 {
-    margin-left: 43%;
-  }
-  .navbar-collapse .nav-item6 .link6 {
-    margin-left: 22%;
-  }
-  .navbar-collapse .nav-item7 .link7 {
-    margin-left: 4%;
+  .navbar-collapse .nav-item .link {
+    margin-left: 2%;
   }
   .navbar-collapse .nav-item {
     letter-spacing: 1px;
@@ -1127,6 +1078,25 @@ footer {
 @media only screen and (min-width: 1200px) {
   main {
     margin: 0px;
+  }
+  .navbar li a::after {
+    position: absolute;
+    content: "";
+    top: 80%;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: white;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: all 0.5s;
+  }
+  :hover {
+    color: #07485e;
+  }
+  :hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
   }
   .bubble-ocean {
     display: block;
