--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -23,31 +23,55 @@ footer {
 }
 
 @include for-phone-tablet {
+    // .logo {
+    //     margin-left: 40%;
+    // }
+    .bgcolorMobilToggle {
+        background-image: $color-bgNav;
+        transition: all 0.3s linear;
+    }
+    .navbar.styleNav {
+        border-radius: 0 0 80% / 100% 0;
+        box-shadow: $box-shadow-navbar-mobile;
+        // opacity: .9;
+        // background: radial-gradient(circle at 0 0, transparent 30%, $color-profile2 50%) top left;
+        // background-size: 100% 100%;
+        // background-repeat: no-repeat;
+        // background: radial-gradient(ellipse closest-side at top left, transparent 50%, $color-profile2 50%);
+        // background: radial-gradient(ellipse 160% 150% at bottom right, transparent 48%, $color-profile2 50%);
+    }
+    .styleNav:after,
+    .styleNav:before {
+        display: none;
+    }
     .navbar-collapse {
-        margin-right: 1%;
+        // margin-right: 1%;
         .navbar-nav {
             width: 100%;
         }
-        .nav-item1 .link1 {
-            margin-left: 83%;
-        }
-        .nav-item2 .link2 {
-            margin-left: 78%;
-        }
-        .nav-item3 .link3 {
-            margin-left: 73%;
-        }
-        .nav-item4 .link4 {
-            margin-left: 57%;
-        }
-        .nav-item5 .link5 {
-            margin-left: 43%;
-        }
-        .nav-item6 .link6 {
-            margin-left: 22%;
-        }
-        .nav-item7 .link7 {
-            margin-left: 4%;
+        // .nav-item1 .link1 {
+        //     margin-left: 83%;
+        // }
+        // .nav-item2 .link2 {
+        //     margin-left: 78%;
+        // }
+        // .nav-item3 .link3 {
+        //     margin-left: 75%;
+        // }
+        // .nav-item4 .link4 {
+        //     margin-left: 58%;
+        // }
+        // .nav-item5 .link5 {
+        //     margin-left: 45%;
+        // }
+        // .nav-item6 .link6 {
+        //     margin-left: 30%;
+        // }
+        // .nav-item7 .link7 {
+        //     margin-left: 23%;
+        // }
+        .nav-item .link {
+            margin-left: 2%;
         }
         .nav-item {
             letter-spacing: 1px;
@@ -93,6 +117,26 @@ footer {
     //margin 
     main {
         margin: 0px;
+    }
+    //navbar
+    .navbar li a::after {
+        position: absolute;
+        content: "";
+        top: 80%;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        background-color: $color-profile1;
+        transform: scaleX(0);
+        transform-origin: right;
+        transition: all 0.5s;
+    }
+    &:hover {
+        color: $color-profile2;
+    }
+    &:hover::after {
+        transform: scaleX(1);
+        transform-origin: left;
     }
     // header
     //profile
